# diesel_alloy_test

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/2024-11-10-152138_create_users_table/: up.sql
migrations/2025-03-17-224618_init_schema/: up.sql
src/: conn.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
