[package]
name = "diesel_uint_test"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2", features = ["postgres"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
dotenvy = "0.15"
alloy-primitives = { git = "https://github.com/sinasab/alloy-core.git", branch = "sina/adding-diesel-support", package = "alloy-primitives", features = ["diesel", "getrandom"] }
alloy-signer = { git = "https://github.com/sinasab/alloy-alloy.git", branch = "sina/tmp-alloy-core-diesel", package = "alloy-signer" }
alloy-signer-local = { git = "https://github.com/sinasab/alloy-alloy.git", branch = "sina/tmp-alloy-core-diesel", package = "alloy-signer-local" }
